--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>The Odin Project - Rock, Paper, Scissors</title>
-  <script src="script.js">
-  </script>
+
 </head>
 <body>
+  <div id="container">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+  <div id="results">
 
+  </div>
+
+  <script src="script.js">
+  </script>
 </body>
 </html>
